RESOLVED FIXED141909
[EFL] fix eo errors
https://bugs.webkit.org/show_bug.cgi?id=141909
Summary [EFL] fix eo errors
KwangHyuk
Reported 2015-02-23 08:52:11 PST
Fix eo errors that occur whenever minibrowser is launched. ERR<11654>:eo lib/eo/eo.c:676 _eo_call_resolve() in elm_entry.eo.c:302: func 'elm_obj_entry_text_style_user_push' (1281) could not be resolved for class 'Elm_Label'. ERR<11654>:eo lib/eo/eo.c:676 _eo_call_resolve() in elm_win.eo.c:450: func 'elm_obj_win_resize_object_add' (371) could not be resolved for class 'Elm_Genlist'.
Attachments
Patch (2.29 KB, patch)
2015-02-23 08:58 PST, KwangHyuk
no flags
KwangHyuk
Comment 1 2015-02-23 08:58:52 PST
Ryuan Choi
Comment 2 2015-02-23 16:40:24 PST
Good to me
KwangHyuk
Comment 3 2015-02-23 17:30:19 PST
(In reply to comment #2) > Good to me You are back ?
WebKit Commit Bot
Comment 4 2015-02-23 19:12:05 PST
Comment on attachment 247122 [details] Patch Clearing flags on attachment: 247122 Committed r180542: <http://trac.webkit.org/changeset/180542>
WebKit Commit Bot
Comment 5 2015-02-23 19:12:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.