[EFL] fix eo errors https://bugs.webkit.org/show_bug.cgi?id=141909

Reviewed by Gyuyoung Kim.

Fix eo errors that occur whenever minibrowser is launched.
- elm_obj_entry_text_style_user_push can only be applied for elm_entry
- elm_obj_win_resize_object_add's first parameter should be elm_win

* MiniBrowser/efl/main.c:
(window_create):


Canonical link: https://commits.webkit.org/159961@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180542 268f45cc-cd09-0410-ab3c-d52691b4dbfc